src/test/resources/refCompilerOutput/invalid/syntaxErr/function/functionConditionalNoReturn.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 11:2 -- Function f is not ended with a return or an exit statement.
Syntactic Error at 18:2 -- Function g is not ended with a return or an exit statement.
2 parser error(s) detected, no further compilation attempted.
